# matsciml

./: .gitignore  pyproject.toml
callbacks/: __init__.py  timing_callback.py
docker/: Dockerfile  docker_notes.md
examples/: gala_habana.py  gala_habana_is2re.py  gala_habana_s2ef.py
examples/datasets/: periodic_properties_pipeline.py
examples/datasets/carolina_db/: single_task_devset.py
examples/model_demos/: faenet_pyg.py
examples/model_demos/mace/: MACE_EF_Train.py
experiments/: check_progress.py  data_config.py  data_config.yml  kusp_server.py  model_config.py  mp_test_runner.py  multi_data_enery_and_force.py  pretrained_mace.py  single_task.py  trainer_config.py  trainer_config.yml  training_script.py
experiments/configs/models/: chgnet_dgl.yaml  m3gnet_dgl.yaml
experiments/datasets/: data_module_config.py
experiments/datasets/tests/: test_data_module_creation.py
experiments/models/: matgl_pretrained.py  pretrained_mace.py
experiments/models/tests/: test_model_creation.py
experiments/task_config/: task_config.py
experiments/task_config/tests/: test_task_creation.py
experiments/training_utils/: utils.py
experiments/utils/: configurator.py  utils.py
matsciml/datasets/: __init__.py  base.py  utils.py
matsciml/lightning/: callbacks.py
matsciml/models/: base.py
ocpmodels/datasets/: base.py
ocpmodels/lightning/: cli.py
ocpmodels/models/: base.py
pl-configs/: trainer.yml
pl-configs/data/: point-cloud.yml
pl-configs/models/: gaanet.yml
pl-configs/predict/: predict_egnn_s2ef.yml
scripts/: generate_leaderboard_logs.py
(+36 files in other folders)
