[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {"name" = "Intel Corporation", "email" = "none@xyz.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
]
description = "PyTorch Lightning and Deep Graph Library enabled materials science deep learning pipeline"
dynamic = ["version", "readme"]
keywords = ["performance", "portability"]
license = {file = "LICENSE.md"}
name = "matsciml"
requires-python = ">=3.8"

[project.optional-dependencies]
all = [
  "matsciml[dev,symmetry,pyg]",
]
dev = [
  "ruff==0.4.0",
  "pre-commit",
  "pytest",
  "pytest-pretty",
  "pytest-dependency"
]
pyg = [
  "torch_geometric==2.4.0",
  "torch_scatter==2.1.2",
  "torch_sparse==0.6.18",
  "pybind11"
]
symmetry = [
  "rowan==1.3.0.post1",
]

[tool.setuptools.packages.find]
include = ["matsciml*", "experiments*"]
where = ["."]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "matsciml.__version__"}

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]
